<resources>
    <string name="app_name">Effective_Mobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="subs_fragment">Subs Fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="hotels_fragment">Hotels Fragment</string>
    <string name="air_tickets_bn">Авиабилеты</string>
    <string name="hotels_bn">Отели</string>
    <string name="in_short_bn">Короче</string>
    <string name="subs_bn">Подписки</string>
    <string name="profile_bn">Профиль</string>
    <string name="from_moscow">Откуда - Москва</string>
    <string name="to_turkey">Куда - Турция</string>
    <string name="musically_fly_away">Музыкально отлететь</string>
    <string name="search_for_cheap_flights">Поиск дешевых авиабилетов</string>
    <string name="filters">фильтры</string>
    <string name="economy">1,эконом</string>
    <string name="ps_rubles">%1$s ₽</string>
    <string name="ps_on_the_way">%1$s в пути</string>
    <string name="without_transfer">\u0020/ Без пересадок</string>
    <string name="see_all_tickets">Посмотреть все билеты</string>
    <string name="passenger">\u0020пассажир</string>
    <string name="filer">Фильтр</string>
    <string name="price_graph">График цен</string>
    <string name="January">января</string>
    <string name="February">февраля</string>
    <string name="March">марта</string>
    <string name="April">апреля</string>
    <string name="May">мая</string>
    <string name="June">июня</string>
    <string name="July">июля</string>
    <string name="August">августа</string>
    <string name="September">сентября</string>
    <string name="October">октября</string>
    <string name="November">ноября</string>
    <string name="December">декабря</string>
    <string name="dash">-</string>
    <string name="comma_space">", "</string>
    <string name="SimpleDateFormat">"dd MMMM"</string>
    <string name="return_ticket">обратно</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="price_subscription">Подписка на цену</string>
    <string name="hard_route">Сложный \nМаршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие\nбилеты</string>
    <string name="popular_direction">Популярное направление</string>
    <string name="istanbul">Стамбул</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="hard_route_fragment">Hard route Fragment</string>
    <string name="weekends_fragment">Weekends Fragment</string>
    <string name="hot_tickets_fragment">Hot tickets Fragment</string>
    <string name="from_ps_rubles">от %1$s ₽</string>
</resources>