<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.countryselected_fragment.CountrySelectedFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_titles"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/gray_4"
        app:cardCornerRadius="16dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrow_left"
            app:tint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_from"
                style="@style/style_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@color/gray_4"
                android:hint="@string/from_moscow"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_6" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_to"
                style="@style/style_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@color/gray_4"
                android:hint="@string/to_turkey"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_6" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            app:dividerColor="@color/gray_5" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrows_swap"
            app:tint="@color/white" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_close"
            app:tint="@color/white" />

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/scrollView_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fillViewport="true"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_titles">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_returnTicket"
                style="@style/style_title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:backgroundTint="@color/gray_3"
                android:paddingHorizontal="12dp"
                android:text="@string/return_ticket"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_plus"
                app:iconGravity="start"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_date"
                style="@style/style_title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:backgroundTint="@color/gray_3"
                android:paddingHorizontal="12dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                app:iconTint="@color/white"
                tools:text="24 фев,сб" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_passenger_count"
                style="@style/style_title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:backgroundTint="@color/gray_3"
                android:paddingHorizontal="12dp"
                android:text="@string/economy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_human"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_filters"
                style="@style/style_title_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:backgroundTint="@color/gray_3"
                android:paddingHorizontal="12dp"
                android:text="@string/filters"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:cornerRadius="50dp"
                app:icon="@drawable/ic_filter"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_directFlights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/gray_1"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/style_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/direct_flights"
                android:textColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_ticketsOffers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_tickets_offer" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_seeAllTickets"
        style="@style/style_title_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:text="@string/see_all_tickets"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_directFlights" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/gray_2"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_seeAllTickets">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bell_bn"
                app:tint="@color/blue" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/style_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/price_subscription"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="8dp"
            android:buttonTint="@color/blue"
            app:thumbTint="@color/white" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>