<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.search_fragment.SearchFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/gray_2"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_2"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="38dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_padding_margin"
                android:backgroundTint="@color/gray_5"
                app:cardCornerRadius="10dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/gray_4"
                app:cardCornerRadius="16dp"
                app:contentPadding="@dimen/default_padding_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:src="@drawable/ic_plane"
                            app:tint="@color/gray_6" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_from"
                            style="@style/style_button_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="@color/gray_4"
                            android:hint="@string/to_turkey"
                            android:inputType="text"
                            android:textColor="@color/white"
                            android:textColorHint="@color/gray_6" />
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginVertical="8dp"
                        app:dividerColor="@color/gray_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:contentDescription=""
                            android:src="@drawable/ic_search"
                            app:tint="@color/white" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_to"
                            style="@style/style_button_text"
                            android:layout_width="270dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="@color/gray_4"
                            android:hint="@string/to_turkey"
                            android:inputType="text"
                            android:textColor="@color/white"
                            android:textColorHint="@color/gray_6" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imageView_clear"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="24dp"
                            android:src="@drawable/ic_close" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_padding_margin"
                android:layout_marginTop="24dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/container_hardRoute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/green"
                        app:cardCornerRadius="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_hard_route" />

                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/style_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/hard_route"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_anywhere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/blue"
                        app:cardCornerRadius="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_ball" />

                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView_anywhere"
                        style="@style/style_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/anywhere"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_weekends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/dark_blue"
                        app:cardCornerRadius="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_calendar" />

                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/style_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/weekends"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_hotTickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center_horizontal"
                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="8dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_fire" />
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/style_text_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/hot_tickets"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/gray_4"
                app:cardCornerRadius="16dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:cardCornerRadius="8dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_istanbul" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/style_title_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/istanbul"
                                android:textColor="@color/white" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/style_text_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/popular_direction"
                                android:textColor="@color/gray_5" />

                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:dividerColor="@color/gray_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:cardCornerRadius="8dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_sochi" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/style_title_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sochi"
                                android:textColor="@color/white" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/style_text_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/popular_direction"
                                android:textColor="@color/gray_5" />

                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:dividerColor="@color/gray_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:cardCornerRadius="8dp">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@drawable/img_phuket" />
                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/style_title_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/phuket"
                                android:textColor="@color/white" />

                            <com.google.android.material.textview.MaterialTextView
                                style="@style/style_text_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@string/popular_direction"
                                android:textColor="@color/gray_5" />

                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:dividerColor="@color/gray_5" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>